# ai-microservices

./: .gitignore  README.md  build.sh  docker-compose.yml  otel-collector-config.yaml  tempo.yaml
Microservices/: build.sh  docker-compose.yml  secrets.sh
Microservices/micronaut/: Dockerfile  README.md  pom.xml
Microservices/micronaut/src/main/resources/: application.properties
Microservices/quarkus/: Dockerfile  pom.xml
Microservices/quarkus/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native
Microservices/quarkus/src/main/resources/: application.properties
api-gateway/: Dockerfile  pom.xml
api-gateway/src/main/resources/: application.yml
browser-extension/: background.js  content.css  content.js  manifest.json
frontend/microservices-front/: Dockerfile  README.md  angular.json  package-lock.json  package.json  responses.txt
frontend/microservices-front/src/: index.html  styles.scss
frontend/microservices-front/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/microservices-front/src/app/Interfaces/: AdminInterfaces.ts  AuthInterfaces.ts  SpamInterfaces.ts
grafana/provisioning/datasources/: datasources.yml
mysql-init/: 00-create-users-db.sql  init.sql
mysql-users-init/: init.sql
spam-fast-api/: .dockerignore  Dockerfile  pyproject.toml
spam-fast-api/app/: config.py  consul.py  main.py  ml.py  schemas.py  train.py  train_distilbert.py  train_roberta.py
spam-fast-api/app/routers/: spam.py
user-service/: Dockerfile  pom.xml
user-service/src/main/resources/: application.yml
(+68 files in other folders)
