[project]
name = "spam-fast-api"
version = "0.1.0"
description = "Spam detection microservice using FastAPI and MultinomialNB"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "joblib>=1.4.0",
    "httpx>=0.27.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=1.1.0",
    "numpy>=1.26.0",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-logging",
]
